add pulsar gc log (#7450)